244Initials/force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/BAC_Email__c.field-meta.xml
<CustomField>
    <fullName>BAC_Email__c</fullName>
    <label>BAC Email</label>
    <type>Email</type>
</CustomField>