244Initials/force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/BAC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>BAC_Last_Name__c</fullName>
    <label>BAC Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>