244Initials/force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/Feasibility_ID__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_ID__c</fullName>
    <label>Feasibility ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>