244Initials/force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/Feasibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Status__c</fullName>
    <label>Feasibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Feasible</fullName>
            </value>
            <value>
                <fullName>Not Feasible</fullName>
            </value>
            <value>
                <fullName>Feasibility Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>