244Initials/force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/Floor_No__c.field-meta.xml
<CustomField>
    <fullName>Floor_No__c</fullName>
    <label>Floor No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>