244Initials/force-app/main/default/objects/vlocity_cmt__QuoteMember__c/fields/SAC_Email__c.field-meta.xml
<CustomField>
    <fullName>SAC_Email__c</fullName>
    <label>SAC Email</label>
    <type>Email</type>
</CustomField>